# xattrs

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml  resources.md  ruff.toml  tox.ini
.github/: dependabot.yml
.github/workflows/: ci.yml  greetings.yml  publish.yml
docs/: Makefile  conf.py  glossary.md  index.md  index.rst  intro.md
docs/features/: adapter.md  case-transformation.md  codec.md  config-granularity.md  discriminator.md  fit-for-all.md  oo-vs-fp.md  thread.md  validation.md
docs/preconf/: json.md
docs/spec/: key.md  scope.md
docs/user-guides/: convertion.md  dispatcher.md  expected-behaviors.md  inheritance-and-invariance.md  serde.md
docs/why/: index.md
examples/: json_example.py  yaml_example.py
src/xattrs/: __init__.py  _asdict.py  _astree.py  _astuple.py  _funcs.py  _guards.py  _helpers.py  _metadata.py  _serde.py  _struct_funcs.py  _tree.py  _types.py  _typing.py  _typing.pyi  _uni.py  abc.py  attrs.py  attrs.pyi  base.py  configuration.py  constants.py  constructor.py  converters.py  dataclasses.py  decoder.py  deconstructor.py  deserializer.py  dispatcher.py  exceptions.py  filters.py  helpers.py  py.typed  serializer.py  typing.py
src/xattrs/_compat/: __init__.py  typing.py  typing_internal.py
src/xattrs/_serde/: dict.py  tree.py  tuple.py
src/xattrs/_struct_funcs/: dict.py  tree.py  tuple.py
src/xattrs/attrs/: __init__.py
src/xattrs/dataclasses/: __init__.py
src/xattrs/preconf/: json.py  msgpack.py  yaml.py
src/xattrs/typing/: codec.py
tests/: __init__.py  test__metadata.py  test__uni.py  test_asdict.py  test_astree.py  test_astuple.py  test_derive.py  test_imports.py  test_serializer_helpers.py  test_string_converters.py
tests/test_preconf/: test_json.py  test_yaml.py
tests/unit/: test_astree.py  test_astuple.py  test_derive.py  test_imports.py
