[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "xattrs"
version = "0.0.0"
description = 'eXtensible serializing and deserializing tools for attrs'
readme = "README.md"
requires-python = ">=3.8"
license = { text = "BSD-3-Clause" }
keywords = ["attrs", "cattrs", "json", "serde"]
authors = [{ name = "Lanqing Huang", email = "lqhuang@outlook.com" }]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Programming Language :: Rust",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: Implementation :: CPython",
  "License :: OSI Approved :: BSD License",
  "Operating System :: POSIX",
  "Typing :: Typed",
]
dependencies = ["attrs"]

[project.optional-dependencies]
tests = [
  'cloudpickle; python_implementation == "CPython"',
  "hypothesis",
  "pympler",
  "pytest>=4.3.0",
  'mypy>=1.1.1; python_implementation == "CPython"',
  'pytest-mypy-plugins; python_implementation == "CPython" and python_version<"3.12"',
  "coverage[toml]",
]
docs = [
  "furo",
  "myst-parser",
  "sphinx",
  "sphinx-notfound-page",
  "sphinxcontrib-towncrier",
  "towncrier",
]
linters = ['mypy', 'black', 'isort', 'ruff']
dev = ["xattrs[tests,docs,linters]", "pre-commit"]

[project.urls]
Documentation = "https://github.com/lqhuang/xattrs#readme"
Issues = "https://github.com/lqhuang/xattrs/issues"
Source = "https://github.com/lqhuang/xattrs"

## Build
[tool.hatch.build.targets.wheel]
packages = ["src/xattrs"]

[tool.hatch.build.targets.sdist]
exclude = [".github"]

## Pytest
[tool.pytest.ini_options]
addopts = ["-ra", "--strict-markers", "--strict-config"]
xfail_strict = true
testpaths = "tests"

[tool.check-wheel-contents]
toplevel = ["xattrs"]

## Formatter
[tool.black]
line-length = 88
target-version = ['py310']
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 88
known_typing = ["typing", "collections.abc"]
sections = [
  "FUTURE",
  "TYPING",
  "STDLIB",
  "THIRDPARTY",
  "FIRSTPARTY",
  "LOCALFOLDER",
]

## Linter
[tool.mypy]
# doc: https://mypy.readthedocs.io/en/stable/config_file.html
# --strict but not --no-implicit-optional
# Import discovery
ignore_missing_imports = true
follow_imports = "normal"
# Platform configuration
# python_version = "3.10"
# Disallow dynamic typing
disallow_any_unimported = true
disallow_any_expr = false
disallow_any_decorated = false
disallow_any_generics = false
disallow_subclassing_any = true
# Untyped definitions and calls
disallow_untyped_calls = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
# None and Optional handling
no_implicit_optional = false
strict_optional = true
# Configuring warnings
warn_redundant_casts = true
warn_unused_ignores = true
warn_return_any = true
warn_unreachable = true
# Miscellaneous strictness flags
implicit_reexport = false
strict_equality = true
# Configuring error messages
show_column_numbers = true
show_error_context = true
show_error_codes = true
# pretty = true  # disable for IDE parser; try add cli option in Makefile
# Incremental mode
cache_fine_grained = true
# Advanced options
warn_incomplete_stub = true
# Miscellaneous
warn_unused_configs = true

[tool.pyright]
# https://github.com/microsoft/pyright/blob/main/docs/configuration.md#main-pyright-config-options
typeCheckingMode = "basic"
reportGeneralTypeIssues = false
# reportPrivateUsage = false

[tool.ruff]
line-length = 88

# Enable rules:
# Pyflakes (F), pycodestyle (E, W), pydocstyle (D), pyupgrade (UP),
# flake8-bandit (S), flake8-bugbear (B), flake8-comprehensions (C4), flake8-datetimez (DTZ), flake8-pytest-style (PT)
# Pylint (PLC, PLE, PLR, PLW), Ruff-specific rules (RUF)
select = ["F", "E", "W", "UP", "S", "B", "C4", "DTZ", "PT"]
extend-select = ["PLC", "PLE", "PLR", "PLW", "RUF"]

ignore = [
  "E501",    # Line too long (95 > 88 characters)
  "S101",    # Use of `assert` detected
  "RUF100",  # Unused `noqa` directive for: E305 (not implemented)
  "PLR2004", # Magic value used in comparison, consider replacing with a constant variable
  "PLR0913", # Too many statements
  "C408",
  "B027",    # Allow non-abstract empty methods in abstract base classes
]

fix = false
#  A list of check code prefixes to consider autofix-able.
fixable = ["F", "E711", "UP", "B"]
unfixable = [
  "I",
  "F401", # Don't touch unused imports
]

ignore-init-module-imports = true

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"] # imported but unused
"tests/**/*" = [
  "PLR2004",
  "S101",
  "TID252",
] # Tests can use magic values, assertions, and relative imports
